--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,7 @@
 $white: #fefdfc;
 $black: #050505;
-$btnColor:#ed1c24;
+//$btnColor:#ed1c24;
+$btnColor:#083742;
 
 @mixin main-font {
   font-family: 'Poppins', sans-serif;
