--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,9 @@ p {
 .sub_page .hero_area {
   height: auto;
   background: none;
-  background-color: #ed1c24;
+  /*background-color: #ed1c24;*/
+  background-color: #083742;
+}
 }
 
 .header_section .container-fluid {
@@ -159,7 +161,8 @@ p {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgba(237, 28, 36, 0.8);
+  /*background-color: rgba(237, 28, 36, 0.8);*/
+  background-color: rgba(15, 97, 79, 0.9);
   overflow-x: hidden;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -189,7 +192,7 @@ p {
 .overlay a:hover {
   border-color: transparent;
   background-color: #fefdfc;
-  color: #ed1c24;
+  color: #083742;
 }
 
 .overlay-content {
@@ -367,7 +370,7 @@ a:focus {
 }
 
 .slider_section .carousel-control-next {
-  background-color: #ed1c24;
+  background-color: #083742;
   top: 80%;
   background-image: url(../images/right-arrow.png);
   background-position: 25px center;
@@ -462,16 +465,16 @@ a:focus {
 .service_section .service_container .box .detail-box a {
   display: inline-block;
   padding: 7px 20px;
-  background-color: #ed1c24;
+  background-color: #083742;
   color: #fefdfc;
   border-radius: 0;
-  border: 1px solid #ed1c24;
+  border: 1px solid #083742;
   font-size: 14px;
 }
 
 .service_section .service_container .box .detail-box a:hover {
   background-color: transparent;
-  color: #ed1c24;
+  color: #083742;
 }
 
 .about_section {
@@ -513,17 +516,17 @@ a:focus {
 .about_section .detail-box a {
   display: inline-block;
   padding: 8px 25px;
-  background-color: #ed1c24;
+  background-color: #083742;
   color: #fefdfc;
   border-radius: 5px;
-  border: 1px solid #ed1c24;
+  border: 1px solid #083742;
   text-transform: uppercase;
   font-size: 14px;
 }
 
 .about_section .detail-box a:hover {
   background-color: transparent;
-  color: #ed1c24;
+  color: #083742;
 }
 
 .concept_section .box .img-box {
@@ -546,7 +549,7 @@ a:focus {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  background-color: rgba(212, 33, 40, 0.9);
+  background-color: rgba(15, 97, 79, 0.9);
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -690,7 +693,7 @@ a:focus {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgba(234, 60, 60, 0.8);
+  background-color: rgba(15, 97, 79, 0.9);
   z-index: 1;
 }
 
@@ -782,16 +785,16 @@ a:focus {
 .client_section .btn-box a {
   display: inline-block;
   padding: 8px 25px;
-  background-color: #ed1c24;
+  background-color: #083742;
   color: #fefdfc;
   border-radius: 5px;
-  border: 1px solid #ed1c24;
+  border: 1px solid #083742;
   text-transform: uppercase;
 }
 
 .client_section .btn-box a:hover {
   background-color: transparent;
-  color: #ed1c24;
+  color: #083742;
 }
 
 /* contact section */
