--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,7 @@ a:focus {
 .quote_btn-container a {
   display: inline-block;
   padding: 5px 15px;
-  background-color: #fc5d35;
+  background-color: #063536;
   color: #f7f7f7;
   font-size: 14px;
   text-transform: uppercase;
