--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,8 @@ iframe {
   width: 100%;
   top: 0;
   left: 0;
-  background-color: #57b846;
+  /*background-color: #57b846;*/
+  background-color: #5377be;
   padding-top: 50px;
   padding-bottom: 39px;
 }
